--- a/practice.css
+++ b/practice.css
@@ -1,10 +1,27 @@
-body{
-    background-color: gray;
+#main{
+    height: 75vh;
+    width: 75vw;
+    display: flex;
 }
-.calc-grid{
-    display: grid;
-    grid-template-columns: repeat(4,100px);
-    justify-content: center;
-    align-content: center;
-    min-height: 100vh;
+#div1,#div2,#div3,#div4,#div5{
+    height: 200px;
+    width: 200px;
+}
+#div1{
+    background-color: blue;
+}
+
+#div2{
+    background-color: red;
+}
+
+#div3{
+    background-color: green;
+}
+
+#div4{
+    background-color: yellow;
+}
+#div5{
+    background-color: orange;
 }
