--- a/practice.css
+++ b/practice.css
@@ -2,26 +2,6 @@
     height: 75vh;
     width: 75vw;
     display: flex;
-}
-#div1,#div2,#div3,#div4,#div5{
-    height: 200px;
-    width: 200px;
-}
-#div1{
-    background-color: blue;
-}
-
-#div2{
-    background-color: red;
-}
-
-#div3{
-    background-color: green;
-}
-
-#div4{
-    background-color: yellow;
-}
-#div5{
-    background-color: orange;
+    flex-basis: 20vh;
+    background-color: linear;
 }
